# pmgdlib

./: .gitignore  LICENSE  README.md  meson.build  pmgdlib_config.h  pmgdlib_core.h  pmgdlib_defs.h  pmgdlib_factory.h  pmgdlib_gl.h  pmgdlib_image.h  pmgdlib_math.h  pmgdlib_msg.h  pmgdlib_pipeline.h  pmgdlib_sdl.h  pmgdlib_std.h  pmgdlib_string.h  pmgdlib_time.h
apps/: meson.build  pmgdlib_scene_render.cpp
data/shaders/default/: def.frag  def.vert
lib/: pmgdlib_config.cpp  pmgdlib_config.h  pmgdlib_core.h  pmgdlib_core_render.cpp  pmgdlib_core_render.h  pmgdlib_defs.h  pmgdlib_factory.cpp  pmgdlib_factory.h  pmgdlib_gl.h  pmgdlib_graph.cpp  pmgdlib_graph.h  pmgdlib_image.h  pmgdlib_main.h  pmgdlib_math.cpp  pmgdlib_math.h  pmgdlib_msg.cpp  pmgdlib_msg.h  pmgdlib_sdl.cpp  pmgdlib_sdl.h  pmgdlib_std.h  pmgdlib_storage.cpp  pmgdlib_storage.h  pmgdlib_string.cpp  pmgdlib_string.h  pmgdlib_time.h
subs/: meson.build
subs/komi/: komi.cpp  komi.xml
subs/roads/: main.cpp  meson.build
tests/: meson.build  test_common.h  test_gl_factory.cpp  test_sdl_core.cpp  test_sdl_gl.cpp  test_sdl_gl_pmgdlib.cpp  test_sdl_native.cpp  test_sdl_vulkan.cpp  tests_config.h  tests_core.h  tests_data.h  tests_main.cpp  tests_math.h  tests_msg.h  tests_pipeline.h  tests_string.h  tests_time.h
