# P.~Mandrik, 2024, https://github.com/pmandrik/pmgdlib
#                   https://inspirehep.net/authors/1395721
#                   https://vk.com/pmandrik

project('pmgdlib', 'cpp', default_options : ['c_std=c20', 'cpp_std=c++20'])
cpp_args=['-Wfatal-errors']
add_project_arguments(cpp_args, language: ['cpp'])
subdir('tests')
